syntax = "proto3";

option go_package = "shared/proto";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// Задача
message Task {
  string id = 1;          // Уникальный ID
  string title = 2;       // Название
  bool completed = 3;     // Статус (выполнено/нет)
}

// Запросы и ответы
message AddTaskRequest {
  string title = 1;
}

message AddTaskResponse {
  Task task = 1;
}

message GetTasksRequest {}  // Пустой запрос

message GetTasksResponse {
  repeated Task tasks = 1;  // Список задач
}

message UpdateTaskRequest {
  string id = 1;
  bool completed = 2;
}

message DeleteTaskRequest {
  string id = 1;
}

// Сервис
service TodoService {
  rpc AddTask (AddTaskRequest) returns (AddTaskResponse) {
    option (google.api.http) = {
      post: "/v1/tasks"
      body: "*"
    };
  }

  rpc GetTasks (GetTasksRequest) returns (GetTasksResponse) {
    option (google.api.http) = {
      get: "/v1/tasks"
    };
  }

  rpc UpdateTask (UpdateTaskRequest) returns (Task) {
    option (google.api.http) = {
      patch: "/v1/tasks/{id}"
      body: "*"
    };
  }

  rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/tasks/{id}"
    };
  }
}